[package]
name = "mbqcification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tket2 = { path = "../tket2/tket2", features = ["portmatching"] }
quantinuum-hugr = { git = "https://github.com/CQCL/hugr", version = "0.2.0" }
portgraph = { version = "0.11" }
pyo3 = { version = "0.20" }
itertools = { version = "0.12.0" }
tket-json-rs = { version = "0.3.0" }
tracing = "0.1.37"
portmatching = { version = "0.3.0" }
urlencoding = "2.1.3"
webbrowser = "0.8.12"
